--- a/Dropdownlistmvc/Views/Dish/Confirm.cshtml
+++ b/Dropdownlistmvc/Views/Dish/Confirm.cshtml
@@ -1,30 +1,14 @@
-﻿
-@{
-    ViewBag.Title = "Confirm";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+﻿@model Dropdownlistmvc.Data.Recipe
 
-<h2>Confirm</h2>
-
-@model Dropdownlistmvc.Data.Dish
-@{
-    ViewBag.Title = "Confirm";
-}
 <h2>Dish</h2>
-@using (Html.BeginForm("Edit", "Dish", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("AddRecipe", "Dish", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Id)
-
     <div class="form-group">
-        @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.RecipeName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.RecipeName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.RecipeName, "", new { @class = "text-danger" })
+            <button type="submit">ok</button>
         </div>
     </div>
-    <p>
-        @Html.ActionLink(" Рассказать", "AddDish", null, new { @class = "btn btn-primary glyphicon glyphicon-plus" })
-    </p>
 }
