--- a/Dropdownlistmvc/Views/Dish/Confirm.cshtml
+++ b/Dropdownlistmvc/Views/Dish/Confirm.cshtml
@@ -8,7 +8,14 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.RecipeName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.RecipeName, "", new { @class = "text-danger" })
-            <button type="submit">ok</button>
+            <button type="submit" onclick="close">ok</button>
         </div>
     </div>
+    <script>
+        function close(parameters) {
+            $("#close").click(function (e) {
+                window.close();
+            });
+        }
+    </script>
 }
