--- a/Dropdownlistmvc/Views/Dish/Confirm.cshtml
+++ b/Dropdownlistmvc/Views/Dish/Confirm.cshtml
@@ -1,6 +1,5 @@
-﻿@model Dropdownlistmvc.Data.Recipe
+﻿@model WhatWeEat.Data.Recipe
 
-<h2>Dish</h2>
 @using (Html.BeginForm("AddRecipe", "Dish", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     <div class="form-group">
@@ -8,14 +7,7 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.RecipeName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.RecipeName, "", new { @class = "text-danger" })
-            <button type="submit" onclick="close">ok</button>
+            <button type="submit" onclick="window.opener.location.reload();close();" class="btn btn-primary glyphicon glyphicon-check">OK</button>
         </div>
     </div>
-    <script>
-        function close(parameters) {
-            $("#close").click(function (e) {
-                window.close();
-            });
-        }
-    </script>
 }
