--- a/Dropdownlistmvc/Views/Dish/Edit.cshtml
+++ b/Dropdownlistmvc/Views/Dish/Edit.cshtml
@@ -36,8 +36,8 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-primary glyphicon glyphicon-check" />
-                <input type="button" value="Добавить блюдо" onclick="window.open('@Url.Action("Confirm", "Dish")', 'newwindow', 'width=300,height=250');return false;" class="btn btn-primary glyphicon glyphicon-check" />           
+                <input type="submit" value="Сохранить" class="btn btn-primary glyphicon glyphicon-check" />
+                <input type="button" value="Добавить блюдо" onclick="window.open('@Url.Action("Confirm", "Dish")', 'newwindow', 'width=300,height=180');return false;" class="btn btn-primary glyphicon glyphicon-check" />           
             </div>
         </div>
     </div>
