--- a/Dropdownlistmvc/Views/Dish/Confirm.cshtml
+++ b/Dropdownlistmvc/Views/Dish/Confirm.cshtml
@@ -8,7 +8,7 @@
             @Html.EditorFor(model => model.RecipeName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.RecipeName, "", new { @class = "text-danger" })
             <div class="col-md-pull-10">
-                <button  type="submit" id="submitOK" class="btn btn-primary glyphicon glyphicon-check">OK</button>
+                <button  type="submit" class="btn btn-primary glyphicon glyphicon-check">OK</button>
             </div>
         </div>
     </div>
